--- a/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
@@ -53,7 +53,7 @@
     <section class="tieu-de">
         Danh sách bài tập
     </section>
-    <ul id="danh_sach_bai_viet" class="noi-dung">
+    <ul id="danh_sach_bai_viet" class="noi-dung danh-sach-bai-viet">
         @if (Model != null)
         {
             foreach (var baiViet in Model)
